cabal-version:      3.0
name:               hbs2-tests
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Network
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common common-deps
    build-depends:
          base, hbs2-core, hbs2-storage-simple, hbs2-peer
        , fuzzy-parse
        , async
        , bytestring
        , cache
        , containers
        , data-default
        , deepseq
        , directory
        , filepath
        , hashable
        , microlens-platform
        , mtl
        , mwc-random
        , prettyprinter
        , QuickCheck
        , random
        , random-shuffle
        , resourcet
        , safe
        , serialise
        , split
        , stm
        , streaming
        , suckless-conf
        , tasty
        , tasty-hunit
        , tasty-quickcheck
        , temporary
        , timeit
        , transformers
        , uniplate
        , unordered-containers
        , vector
        , prettyprinter-ansi-terminal
        , interpolatedstring-perl6
        , string-conversions
        , unliftio

common shared-properties
  ghc-options:
        -Wall
        -O2
        -fno-warn-type-defaults
        -- -fno-warn-unused-matches
        -- -fno-warn-unused-do-bind
        -- -Werror=missing-methods
        -- -Werror=incomplete-patterns
        -- -fno-warn-unused-binds
        -threaded
        -rtsopts
        "-with-rtsopts=-N4 -A256m -AL256m -I0"


  default-language:    Haskell2010

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeOperators
                     , TypeFamilies

library
    import:           shared-properties
    import:           common-deps
    hs-source-dirs:   lib
    exposed-modules:
        HBS2.Tests.MapStore
        HBS2.Tests.StoreAsMerkle

test-suite test-skey
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    other-modules:

    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestSKey.hs



executable test-udp
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    ghc-options:
      -- -prof
      -- -fprof-auto

    other-modules:

    -- other-extensions:

    hs-source-dirs:   test
    main-is:          TestUDP.hs

    build-depends:
          base, hbs2-core, hbs2-storage-simple
        , async
        , attoparsec
        , bytestring
        , cache
        , clock
        , containers
        , data-default
        , data-textual
        , directory
        , hashable
        , microlens-platform
        , mtl
        , mwc-random
        , network
        , network-ip
        , prettyprinter
        , QuickCheck
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-hunit
        , text
        , transformers
        , uniplate
        , vector


executable refchan-dummy-validator
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    ghc-options:
      -- -prof
      -- -fprof-auto

    other-modules:

    -- other-extensions:

    -- type:             exitcode-stdio-1.0
    hs-source-dirs:   refchan-dummy-validator
    main-is:          DummyValidatorMain.hs

    build-depends:
          base, hbs2-core, hbs2-storage-simple
        , async
        , attoparsec
        , bytestring
        , cache
        , clock
        , containers
        , data-default
        , data-textual
        , directory
        , hashable
        , microlens-platform
        , mtl
        , mwc-random
        , network
        , network-ip
        , optparse-applicative
        , prettyprinter
        , QuickCheck
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-hunit
        , text
        , transformers
        , uniplate
        , vector
        , unliftio



executable test-unix
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    ghc-options:
      -- -prof
      -- -fprof-auto

    other-modules:

    -- other-extensions:

    -- type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestUNIX.hs

    build-depends:
          base, hbs2-core, hbs2-storage-simple
        , async
        , attoparsec
        , bytestring
        , cache
        , clock
        , containers
        , data-default
        , data-textual
        , directory
        , hashable
        , microlens-platform
        , mtl
        , mwc-random
        , network
        , network-ip
        , prettyprinter
        , QuickCheck
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-hunit
        , text
        , transformers
        , uniplate
        , vector


-- executable test-proto-service
test-suite test-proto-service
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    ghc-options:
      -- -prof
      -- -fprof-auto

    other-modules:

    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          PrototypeGenericService.hs

    build-depends:
          base, hbs2-core, hbs2-storage-simple
        , async
        , attoparsec
        , bytestring
        , cache
        , clock
        , containers
        , data-default
        , data-textual
        , directory
        , hashable
        , microlens-platform
        , mtl
        , mwc-random
        , network
        , network-ip
        , prettyprinter
        , QuickCheck
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-hunit
        , text
        , transformers
        , uniplate
        , vector


-- executable test-proto-service
test-suite test-storage-service
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    ghc-options:
      -- -prof
      -- -fprof-auto

    other-modules:

    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          StorageServiceTest.hs

    build-depends:
          base, hbs2-core, hbs2-storage-simple, hbs2-peer
        , async
        , attoparsec
        , bytestring
        , cache
        , clock
        , containers
        , data-default
        , data-textual
        , directory
        , hashable
        , microlens-platform
        , mtl
        , mwc-random
        , network
        , network-ip
        , prettyprinter
        , QuickCheck
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-hunit
        , text
        , transformers
        , uniplate
        , vector



test-suite test-tcp
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    ghc-options:
      -- -prof
      -- -fprof-auto

    other-modules:

    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestTCP.hs

    build-depends:
          base, hbs2-core, hbs2-storage-simple
        , async
        , attoparsec
        , bytestring
        , cache
        , clock
        , containers
        , data-default
        , data-textual
        , directory
        , hashable
        , microlens-platform
        , mtl
        , mwc-random
        , network
        , network-ip
        , prettyprinter
        , QuickCheck
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-hunit
        , text
        , transformers
        , uniplate
        , vector
        , network-simple
        , network-byte-order


executable test-tcp-net
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    ghc-options:
      -- -prof
      -- -fprof-auto

    other-modules:

    -- other-extensions:

    -- type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestTCPNet.hs

    build-depends:
          base, hbs2-core
        , async
        , attoparsec
        , bytestring
        , cache
        , clock
        , containers
        , data-default
        , data-textual
        , hashable
        , microlens-platform
        , mtl
        , mwc-random
        , network
        , network-ip
        , prettyprinter
        , QuickCheck
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-hunit
        , text
        , transformers
        , uniplate
        , vector


executable test-logger
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    ghc-options:
      -- -prof
      -- -fprof-auto

    other-modules:

    -- other-extensions:

    -- type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestLogger.hs

    build-depends:
          base, hbs2-core, hbs2-storage-simple
        , async
        , attoparsec
        , bytestring
        , cache
        , clock
        , containers
        , data-default
        , data-textual
        , directory
        , hashable
        , microlens-platform
        , mtl
        , mwc-random
        , network
        , network-ip
        , prettyprinter
        , QuickCheck
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-hunit
        , text
        , transformers
        , uniplate
        , vector
        , fast-logger


executable test-saltine
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    ghc-options:
      -- -prof
      -- -fprof-auto

    other-modules:

    -- other-extensions:

    -- type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestSaltine.hs

    build-depends:
          base, hbs2-core
        , async
        , attoparsec
        , bytestring
        , cache
        , clock
        , containers
        , data-default
        , data-textual
        , directory
        , hashable
        , microlens-platform
        , mtl
        , mwc-random
        , network
        , network-ip
        , prettyprinter
        , random
        , safe
        , serialise
        , stm
        , streaming
        , saltine
        , text
        , transformers
        , uniplate
        , vector
        , fast-logger


executable test-walk-tree-meta
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    ghc-options:
      -- -prof
      -- -fprof-auto

    other-modules:

    -- other-extensions:

    -- type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestWalkTreeMeta.hs

    build-depends:
          base, hbs2-core
        -- , async
        -- , attoparsec
        , bytestring
        -- , cache
        -- , clock
        , containers
        , interpolatedstring-perl6
        -- , data-default
        -- , data-textual
        -- , directory
        -- , hashable
        -- , microlens-platform
        -- , mtl
        -- , mwc-random
        -- , network
        -- , network-ip
        , prettyprinter
        -- , random
        , safe
        , serialise
        -- , stm
        -- , streaming
        -- , saltine
        , text
        , typed-process
        -- , transformers
        , uniplate
        -- , vector
        -- , fast-logger


test-suite test-concurrent-write
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010


    ghc-options:
      -threaded
      -rtsopts
      "-with-rtsopts=-N6 -A64m -AL256m -I0"

    other-modules:

    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestConcurrentWrite.hs

    build-depends:
          base, hbs2-storage-simple, hbs2-core
        , async
        , bytestring
        , cborg
        , containers
        , directory
        , filepath
        , hashable
        , microlens-platform
        , mtl
        , prettyprinter
        , QuickCheck
        , stm
        , random
        , safe
        , serialise
        , tasty
        , tasty-hunit
        , temporary
        , timeit
        , uniplate
        , vector
        , terminal-progress-bar


test-suite test-misc
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010


    ghc-options:
      -threaded
      -rtsopts
      "-with-rtsopts=-N6 -A64m -AL256m -I0"

    other-modules:

    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestMisc.hs

    build-depends:
          base, hbs2-storage-simple, hbs2-core
        , async
        , bytestring
        , cborg
        , containers
        , directory
        , filepath
        , hashable
        , microlens-platform
        , mtl
        , prettyprinter
        , QuickCheck
        , stm
        , random
        , safe
        , serialise
        , tasty
        , tasty-hunit
        , temporary
        , timeit
        , uniplate
        , vector
        , terminal-progress-bar


executable topsort-commits
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    ghc-options:
      -- -prof
      -- -fprof-auto

    other-modules:

    -- other-extensions:

    -- type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TopSortCommits.hs

    build-depends:
          base, hbs2-core
        -- , async
        -- , attoparsec
        , bytestring
        -- , cache
        -- , clock
        , containers
        , interpolatedstring-perl6
        -- , data-default
        -- , data-textual
        -- , directory
        -- , hashable
        -- , microlens-platform
        -- , mtl
        -- , mwc-random
        -- , network
        -- , network-ip
        , prettyprinter
        -- , random
        , safe
        , serialise
        -- , stm
        -- , streaming
        -- , saltine
        , text
        , typed-process
        -- , transformers
        , uniplate
        -- , vector
        -- , fast-logger

executable test-enc-1
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    ghc-options:
      -- -prof
      -- -fprof-auto

    other-modules:

    -- other-extensions:

    -- type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestEnc.hs

    build-depends:
          base, hbs2-core
        -- , async
        -- , attoparsec
        , bytestring
        -- , cache
        -- , clock
        , containers
        , interpolatedstring-perl6
        -- , data-default
        -- , data-textual
        -- , directory
        -- , hashable
        -- , microlens-platform
        -- , mtl
        -- , mwc-random
        , memory
        , network-byte-order
        -- , network
        -- , network-ip
        , prettyprinter
        -- , random
        , safe
        , serialise
        -- , stm
        -- , streaming
        , saltine
        , text
        , time
        -- , typed-process
        -- , transformers
        , uniplate
        , unliftio
        -- , vector
        -- , fast-logger



executable create-raw-tx
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    ghc-options:
      -- -prof
      -- -fprof-auto

    other-modules:

    -- other-extensions:

    -- type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestRawTx.hs

    build-depends:
          base, hbs2-core
        -- , async
        -- , attoparsec
        , bytestring
        -- , cache
        -- , clock
        -- , containers
        -- , interpolatedstring-perl6
        -- , data-default
        -- , data-textual
        -- , directory
        -- , hashable
        , http-conduit
        , http-types
        , optparse-applicative
        -- , microlens-platform
        -- , mtl
        -- , mwc-random
        -- , network
        -- , network-ip
        , prettyprinter
        -- , random
        -- , safe
        , serialise
        -- , stm
        -- , streaming
        -- , saltine
        , text
        -- , typed-process
        -- , transformers
        -- , uniplate
        -- , vector
        -- , fast-logger


executable test-notify
    import:           shared-properties
    default-language: Haskell2010

    -- other-extensions:

    hs-source-dirs:   test/notify-unix
    main-is:          Main.hs
    build-depends:
          base, hbs2-core
        , async
        , bytestring
        , cache
        , containers
        , directory
        , hashable
        , microlens-platform
        , mtl
        , prettyprinter
        , QuickCheck
        , quickcheck-instances
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-quickcheck
        , tasty-hunit
        , tasty-quickcheck
        , transformers
        , uniplate
        , vector
        , saltine
        , simple-logger
        , string-conversions
        , filepath
        , temporary
        , unliftio
        , unordered-containers
        , resourcet


executable test-playground
    import:           shared-properties
    default-language: Haskell2010

    -- other-extensions:

    hs-source-dirs:   test/playground
    main-is:          Main.hs
    build-depends:
          base, hbs2-core
        , fuzzy-parse
        , async
        , bytestring
        , cache
        , containers
        , directory
        , hashable
        , microlens-platform
        , mtl
        , prettyprinter
        , QuickCheck
        , quickcheck-instances
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-quickcheck
        , tasty-hunit
        , tasty-quickcheck
        , transformers
        , uniplate
        , vector
        , saltine
        , simple-logger
        , string-conversions
        , filepath
        , temporary
        , unliftio
        , unordered-containers
        , resourcet
        , text-icu >= 0.8.0.3
        , skylighting-core
        , skylighting
        , skylighting-lucid
        , lucid
        , text


executable test-pipe-mess
    import:           shared-properties
    default-language: Haskell2010

    -- other-extensions:

    hs-source-dirs:   test
    main-is:          TestPipeMessaging.hs
    build-depends:
          base, hbs2-core
        , async
        , bytestring
        , cache
        , containers
        , directory
        , hashable
        , microlens-platform
        , mtl
        , network-byte-order
        , prettyprinter
        , QuickCheck
        , quickcheck-instances
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-quickcheck
        , tasty-hunit
        , tasty-quickcheck
        , transformers
        , uniplate
        , vector
        , saltine
        , simple-logger
        , string-conversions
        , filepath
        , temporary
        , unliftio
        , unordered-containers
        , unix
        , timeit



executable test-merge-limits
    import:           shared-properties
    default-language: Haskell2010

    -- other-extensions:

    hs-source-dirs:   test
    main-is:          TestMergeLimits.hs
    build-depends:
          base, hbs2-core, hbs2-storage-simple
        , async
        , bytestring
        , cache
        , containers
        , hashable
        , microlens-platform
        , mtl
        , prettyprinter
        , QuickCheck
        , quickcheck-instances
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-quickcheck
        , tasty-hunit
        , tasty-quickcheck
        , transformers
        , uniplate
        , vector
        , filepath
        , temporary
        , unliftio
        , unordered-containers
        , unix
        , timeit


executable test-lsw-write
    import:           shared-properties
    default-language: Haskell2010

    -- other-extensions:

    hs-source-dirs:   test
    main-is:          TestLSMWrite.hs
    build-depends:
          base, hbs2-core, hbs2-storage-simple
        , async
        , bytestring
        , cache
        , containers
        , hashable
        , microlens-platform
        , mtl
        , prettyprinter
        , QuickCheck
        , quickcheck-instances
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-quickcheck
        , tasty-hunit
        , tasty-quickcheck
        , transformers
        , uniplate
        , vector
        , filepath
        , temporary
        , unliftio
        , unordered-containers
        , unix
        , timeit


executable test-refchan-notify
    import:           shared-properties
    default-language: Haskell2010

    -- other-extensions:

    hs-source-dirs:   test
    main-is:          TestRefChanNotify.hs
    build-depends:
          base

        , hbs2-core
        , hbs2-peer
        , suckless-conf

        , async
        , bytestring
        , cache
        , containers
        , hashable
        , microlens-platform
        , mtl
        , prettyprinter
        , QuickCheck
        , quickcheck-instances
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-quickcheck
        , tasty-hunit
        , tasty-quickcheck
        , transformers
        , uniplate
        , vector
        , filepath
        , temporary
        , unliftio
        , unordered-containers
        , unix
        , timeit


executable test-walk-merkletree-cornercase
    import:           shared-properties, common-deps
    hs-source-dirs:   test
    main-is:          TestWalkMerkleTreeCorner.hs
    build-depends:    hbs2-tests

test-suite test-walk-merkle-conditional
    import:           shared-properties, common-deps
    type: exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestWalkMerkleConditional.hs
    build-depends:    hbs2-tests


executable test-unix-messaging
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010
    ghc-options:
    hs-source-dirs:   test
    main-is:          CheckUnixMessaging.hs
    build-depends:
          base, hbs2-core
        , network
        , string-conversions
        , text
        , time


executable test-scripts
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010
    ghc-options:
    hs-source-dirs:   test
    main-is:          TestScripts.hs
    build-depends:
          base, hbs2-core
        , network
        , string-conversions
        , suckless-conf
        , text
        , time
        , zstd
        , bzlib




