cabal-version:      3.0
name:               hbs2
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:


common shared-properties
  ghc-options:
        -Wall
        -- -fno-warn-unused-matches
        -- -fno-warn-unused-do-bind
        -- -Werror=missing-methods
        -- -Werror=incomplete-patterns
        -- -fno-warn-unused-binds
        -threaded
        -rtsopts
        "-with-rtsopts=-N4 -A64m -AL256m -I0"


  default-language:    Haskell2010

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies


executable hbs2
    import:           shared-properties
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base, hbs2-core, hbs2-storage-simple
                    , aeson
                    , async
                    , base58-bytestring
                    , binary
                    , bytestring
                    , cborg
                    , clock
                    , containers
                    , cryptonite
                    , deepseq
                    , directory
                    , filepath
                    , hashable
                    , interpolatedstring-perl6
                    , memory
                    , microlens-platform
                    , optparse-applicative
                    , prettyprinter
                    , safe
                    , serialise
                    , streaming
                    , text
                    , transformers
                    , uniplate
                    , uuid


    hs-source-dirs:   .
    default-language: Haskell2010



