cabal-version:      3.0
name:               hbs2
version:            0.24.1.2
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Network
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:


common shared-properties
  ghc-options:
        -Wall
        -- -fno-warn-unused-matches
        -- -fno-warn-unused-do-bind
        -- -Werror=missing-methods
        -- -Werror=incomplete-patterns
        -- -fno-warn-unused-binds
        -threaded
        -rtsopts
        "-with-rtsopts=-N4 -A64m -AL256m -I0"


  default-language:    Haskell2010

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies


executable hbs2
    import:           shared-properties
    main-is:          Main.hs
    other-modules:
      Paths_hbs2
    -- other-extensions:
    build-depends:    base, hbs2-core, hbs2-peer, hbs2-storage-simple, hbs2-keyman-direct-lib
                    , aeson
                    , async
                    , base58-bytestring
                    , binary
                    , bytestring
                    , cborg
                    , clock
                    , containers
                    , cryptonite
                    , deepseq
                    , directory
                    , filepath
                    , hashable
                    , interpolatedstring-perl6
                    , magic
                    , memory
                    , microlens-platform
                    , mtl
                    , optparse-applicative
                    , prettyprinter
                    , safe
                    , saltine
                    , serialise
                    , streaming
                    , streaming-bytestring
                    , suckless-conf
                    , resourcet
                    , text
                    , temporary
                    , transformers
                    , uniplate
                    , uuid
                    , terminal-progress-bar
                    , stm
                    , unliftio
                    , network-byte-order
                    , unordered-containers

    hs-source-dirs:   .
    default-language: Haskell2010



